<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="bitriseDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bFn-2O-x1u">
                                <rect key="frame" x="20" y="294.5" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uT9-WN-mb2">
                                <rect key="frame" x="20" y="358.5" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jFY-eF-e6d">
                                <rect key="frame" x="177" y="432.5" width="60" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Login"/>
                                <connections>
                                    <action selector="loginTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gzw-WX-orv"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BUE-Au-Gic">
                                <rect key="frame" x="20" y="274.5" width="374" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="uT9-WN-mb2" firstAttribute="top" secondItem="bFn-2O-x1u" secondAttribute="bottom" constant="30" id="CDl-ZP-r8Y"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bFn-2O-x1u" secondAttribute="trailing" constant="20" id="Eab-Xj-Ouk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uT9-WN-mb2" secondAttribute="trailing" constant="20" id="FUv-PS-XZB"/>
                            <constraint firstItem="jFY-eF-e6d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bny-4O-0se"/>
                            <constraint firstItem="jFY-eF-e6d" firstAttribute="top" secondItem="uT9-WN-mb2" secondAttribute="bottom" constant="40" id="i1N-TF-qxB"/>
                            <constraint firstItem="bFn-2O-x1u" firstAttribute="top" secondItem="BUE-Au-Gic" secondAttribute="bottom" constant="20" id="knc-hA-Er4"/>
                            <constraint firstItem="uT9-WN-mb2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nQP-UX-3PA"/>
                            <constraint firstItem="BUE-Au-Gic" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nWq-Va-OQm"/>
                            <constraint firstItem="bFn-2O-x1u" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ogw-Jy-cs8"/>
                            <constraint firstItem="jFY-eF-e6d" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="pxc-Pp-eC8"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BUE-Au-Gic" secondAttribute="trailing" constant="20" id="uCz-fm-ZQ8"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="labelWarning" destination="BUE-Au-Gic" id="yR1-4D-AuA"/>
                        <outlet property="textEmail" destination="bFn-2O-x1u" id="aXD-Kg-pwL"/>
                        <outlet property="textPassword" destination="uT9-WN-mb2" id="kqj-Ot-Rj2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="100" y="119"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemRedColor">
            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
